# doubleml-coverage

./: .gitignore  .nojekyll  .pre-commit-config.yaml  LICENSE  README.md  add_metadata_to_csv.py  index.html  requirements.txt  robots.txt  search.json  sitemap.xml
dev/: index.html  robots.txt  search.json  sitemap.xml
did/: did_cs.html  did_cs_multi.html  did_multi.html  did_pa.html  did_pa_multi.html
doc/: _quarto-dev.yml  _quarto.yml  _website.yml  index.html  index.qmd  irm.qmd  requirements-doc.txt  styles.css
irm/: apo.html  iivm.html  irm.html  irm_cate.html  irm_gate.html  qte.html  ssm.html
monte-cover/: pyproject.toml
monte-cover/src/montecover/: __init__.py  base.py  utils.py  utils_tuning.py
monte-cover/src/montecover/did/: __init__.py  did_cs_multi.py  did_multi.py  did_pa_multi.py  did_pa_multi_tune.py
monte-cover/src/montecover/irm/: __init__.py  apo.py  apos.py  apos_tune.py  cvar.py  iivm_late.py  irm_ate.py  irm_ate_sensitivity.py  irm_ate_tune.py  irm_atte.py  irm_atte_sensitivity.py  irm_cate.py  irm_gate.py  lpq.py  pq.py
monte-cover/src/montecover/plm/: __init__.py  logistic_ate.py  lplr_ate.py  lplr_ate_tune.py  pliv_late.py  pliv_late_cluster.py  plpr_ate.py  plpr_ate_tune.py  plr_ate.py  plr_ate_cluster.py  plr_ate_sensitivity.py  plr_ate_tune.py  plr_cate.py  plr_gate.py
monte-cover/src/montecover/rdd/: __init__.py  rdd.py
monte-cover/src/montecover/ssm/: __init__.py  ssm_mar_ate.py  ssm_mar_ate_tune.py  ssm_nonig_ate.py
plm/: lplr.html  pliv.html  plr.html  plr_cate.html  plr_gate.html
rdd/: rdd.html
ssm/: ssm_mar.html  (+1 more)
(+422 files in other folders)
